--- a/pur_beurre_project/foodSearch/templates/foodSearch/base.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/base.html
@@ -52,9 +52,12 @@
           </li>
           <li class="nav-item">
             {% if user.is_authenticated %}
-              <a class="nav-link" title="Mon compte" href="{% url 'foodSearch:userpage' %}"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
+              <!-- <a class="nav-link" title="Mon compte" href="{% url 'foodSearch:userpage' %}"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a> -->
+              <a href="" id="connection" class="nav-link" title="Me connecter" data-toggle="modal" data-target="#modalLogIn">
+                <i class="fa fa-user fa-2x"></i>
+              </a>
             {% else %}
-              <a href="" id="connect" class="nav-link" title="Me connecter" data-toggle="modal" data-target="#modalLogIn">
+              <a href="" id="connection" class="nav-link" title="Me connecter" data-toggle="modal" data-target="#modalLogIn">
                 <i class="fa fa-user fa-2x"></i>
               </a>
 
@@ -65,7 +68,8 @@
               <a class="nav-link" title="Mes aliments" href="{% url 'foodSearch:watchlist' %}"> <i class="fa fa-carott" aria-hidden="true"></i> </a>
             </li>
             <li class="nav-item">
-              <a href="" id="disconnect" class="nav-link" title="Me déconnecter" data-toggle="modal" data-target="#modalLogOut">
+              <!-- <a class="nav-link" title="Me déconnecter" href="{% url 'logout' %}"> <i class="fas fa-sign-out-alt fa-2x" aria-hidden="true"></i> </a> -->
+              <a href="" id="disconnection" class="nav-link" title="Me déconnecter" data-toggle="modal" data-target="#modalLogOut">
                 <i class="fas fa-sign-out-alt fa-2x"></i>
               </a>
 
@@ -78,9 +82,6 @@
 
   {% block content %}{% endblock %}
 
-  {% include 'registration/login.html' %}
-  {% include 'registration/logout.html' %}
-
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="row">
@@ -88,6 +89,8 @@
       <div class="col-lg-6 text-center small text-muted"><a class="d-block" href="{% url 'foodSearch:index' %}#contact">Contacts</a></div>
     </div>
   </footer>
+
+  {% include 'registration/log.html' %}
 
   <!-- Bootstrap core JavaScript -->
   <script src="{% static 'foodSearch/vendor/jquery/jquery.min.js' %}"></script>
