--- a/pur_beurre_project/foodSearch/templates/foodSearch/base.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/base.html
@@ -52,12 +52,9 @@
           </li>
           <li class="nav-item">
             {% if user.is_authenticated %}
-              <!-- <a class="nav-link" title="Mon compte" href="{% url 'foodSearch:userpage' %}"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a> -->
-              <a href="" id="connection" class="nav-link" title="Me connecter" data-toggle="modal" data-target="#modalLogIn">
-                <i class="fa fa-user fa-2x"></i>
-              </a>
+              <a class="nav-link" title="Mon compte" href="{% url 'foodSearch:userpage' %}"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
             {% else %}
-              <a href="" id="connection" class="nav-link" title="Me connecter" data-toggle="modal" data-target="#modalLogIn">
+              <a href="" id="" class="nav-link connection" title="Me connecter" data-toggle="modal" data-target="#modalLogIn">
                 <i class="fa fa-user fa-2x"></i>
               </a>
 
