--- a/pur_beurre_project/foodSearch/templates/registration/log.html
+++ b/pur_beurre_project/foodSearch/templates/registration/log.html
@@ -37,7 +37,7 @@
           <p>
             Vous n'avez toujours pas de compte Pur Beurre? Pas de panique, créez-en un :
           </p>
-          <a class="btn btn-secondary" href="{% url 'foodSearch:register' %}" class="btn">Créer un compte</a>
+          <a id="registration" class="btn btn-secondary" data-toggle="modal" data-target="#modalRegister">Créer un compte</a>
         </div>
       </div>
     </div>
@@ -55,7 +55,7 @@
       </div>
       <div class="modal-body">
         <p>Êtes-vous sûr de vouloir vous déconnecter?</p>
-        <a href="{% url 'logout' %}"><button type="button" name="button" id="logoutform" class="btn btn-primary">Oui, je me déconnecte</button></a>
+        <a id="logoutbtn" href="{% url 'logout' %}"><button type="button" name="button" class="btn btn-primary">Oui, je me déconnecte</button></a>
       </div>
     </div>
   </div>
@@ -63,35 +63,39 @@
 <!-- End of Login Modal -->
 
 <!--  Login Form Modal -->
-<!-- <div id="modalLogOut" class="modal fade modalLogOut" tabindex="-1" role="dialog">
+<div id="modalRegister" class="modal fade modalLogOut" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">{{ title }}</h4>
+        <h4 class="modal-title">Créer un compte</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       </div>
       <div class="modal-body">
-        <form method="post" action="{% url 'foodSearch:register' %}">
+        <form id="registerForm" method="post" action="{% url 'foodSearch:register' %}">
           {% csrf_token %}
-          {% for non_field_error in form.non_field.errors %}
-            <p class="help is-danger">{{ non_field_error}}</p>
-          {% endfor %}
-          {% for field in form %}
-            <div class="field">
-              <label for="{{ field.id_for_label }}" class="label mt-1">{{ field.html_name }}</label>
-                {{ field }}
-                {% if field.help_text %}
-                  <p class="help">{{ field.help_text }}</p>
-                {% endif %}
-                {% for error in field.errors %}
-                  <p class="help">{{ error }}</p>
-                {% endfor %}
-            </div>
-          {% endfor %}
+          <div class="form-group">
+            <input type="name" name="username" id="signUp-username" class="form-control"
+             placeholder="Nom d'utilisateur" required="required"/>
+          </div>
+          <div class="text-danger text-center" id="username-error" style="display:none;">
+            <p>Un utilisateur existe déjà à ce nom</p>
+            <a class="connection" data-toggle="modal" data-target="#modalLogIn">Se connecter</a>
+          </div>
+          <div class="form-group">
+            <input type="email" name="email" id="signUp-email" class="form-control"
+             placeholder="Email" required="required" />
+          </div>
+          <p class="text-danger text-center" id="no-user-error" style="display:none;">Utilisateur introuvable, créez un compte ou réessayez</p>
+          <div class="form-group">
+            <input type="password" name="password" id="signUp-password" class="form-control"
+             placeholder="Mot de passe" required="required" />
+          </div>
+
+          <p class="text-danger text-center" id="password-error" style="display:none;">Mot de passe incorrect</p>
           <button type="submit" class="btn btn-secondary mt-3">Créer mon compte</button>
           </form>
       </div>
     </div>
   </div>
-</div> -->
+</div>
 <!-- End of Login Modal -->
