--- a/pur_beurre_project/foodSearch/templates/registration/log.html
+++ b/pur_beurre_project/foodSearch/templates/registration/log.html
@@ -45,7 +45,7 @@
 </div>
 <!-- End of Login Modal -->
 
-<!--  Login Form Modal -->
+<!--  Logout Form Modal -->
 <div id="modalLogOut" class="modal fade modalLogOut" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -60,9 +60,9 @@
     </div>
   </div>
 </div>
-<!-- End of Login Modal -->
+<!-- End of Logout Modal -->
 
-<!--  Login Form Modal -->
+<!--  Register Form Modal -->
 <div id="modalRegister" class="modal fade modalLogOut" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -98,4 +98,4 @@
     </div>
   </div>
 </div>
-<!-- End of Login Modal -->
+<!-- End of Register Modal -->
