--- a/pur_beurre_project/foodSearch/templates/registration/log.html
+++ b/pur_beurre_project/foodSearch/templates/registration/log.html
@@ -90,7 +90,6 @@
             <input type="password" name="password" id="signUp-password" class="form-control"
              placeholder="Mot de passe" required="required" />
           </div>
-
           <p class="text-danger text-center" id="password-error" style="display:none;">Mot de passe incorrect</p>
           <button type="submit" class="btn btn-secondary mt-3">Créer mon compte</button>
           </form>
@@ -99,3 +98,23 @@
   </div>
 </div>
 <!-- End of Register Modal -->
+
+<!--  save_favorite not connected Form Modal -->
+<div id="modalNotConnected" class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Vous n'êtes pas encore connecté...</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+      <div class="modal-body">
+        <p class="text-secondary">Pour enregistrer ce produit dans votre liste de favoris <br>Veuillez vous connecter ou créer votre compte.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+        <a class="connection btn btn-primary" data-toggle="modal" data-target="#modalLogIn">Se connecter</a>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End of save_favorite not connected-->
