btn retour dans watchlist et userpage, reset loginform

--- a/foodSearch/templates/foodSearch/watchlist.html
+++ b/foodSearch/templates/foodSearch/watchlist.html
@@ -65,6 +65,9 @@
           {% endif %}
   </div>
   {% endif %}
+  <div class="row justify-content-center mt-3">
+      <a class="btn btn-secondary" href="javascript:history.go(-1)" role="button">Retour</a>
+  </div>
 </section>
 
 {% endblock %}
