--- a/foodSearch/templates/foodSearch/userpage.html
+++ b/foodSearch/templates/foodSearch/userpage.html
@@ -17,6 +17,9 @@
   <div class="col-12 text-center">
     <p>Adresse mail : <span style="background-color:white; color:black;">{{ email }}</span></p>
   </div>
+  <div class="row justify-content-center mt-3">
+      <a class="btn btn-secondary" href="javascript:history.go(-1)" role="button">Retour</a>
+  </div>
 </section>
 
 {% endblock %}
