--- a/foodSearch/templates/foodSearch/watchlist.html
+++ b/foodSearch/templates/foodSearch/watchlist.html
@@ -27,21 +27,7 @@
               <a href="/delete_favorite_from_watchlist/{{ favorite.substitute.id }}/{{ page }}/" value="" class="text-white">
                 <span class='fas fa-floppy-o'></span> Retirer ce produit de mes favoris</a>
 
-              {% if favorite.substitute.nutrition_grade_fr == 'a' %}
-                <span style="background-color: #5bac09;" class="grade upimg">{{ favorite.substitute.nutrition_grade_fr }}</span>
-              {% endif %}
-              {% if favorite.substitute.nutrition_grade_fr == 'b' %}
-                <span style="background-color: #0977ac;" class="grade upimg">{{ favorite.substitute.nutrition_grade_fr }}</span>
-              {% endif %}
-              {% if favorite.substitute.nutrition_grade_fr == 'c' %}
-                <span style="background-color: #f7e80b;" class="grade upimg">{{ favorite.substitute.nutrition_grade_fr }}</span>
-              {% endif %}
-              {% if favorite.substitute.nutrition_grade_fr == 'd' %}
-                <span style="background-color: #f7a60b;" class="grade upimg">{{ favorite.substitute.nutrition_grade_fr }}</span>
-              {% endif %}
-              {% if favorite.substitute.nutrition_grade_fr == 'e' %}
-                <span style="background-color: #f00000;" class="grade upimg">{{ favorite.substitute.nutrition_grade_fr }}</span>
-              {% endif %}
+              <span class="grade upimg {{ favorite.substitute.nutrition_grade_fr }}">{{ favorite.substitute.nutrition_grade_fr }}</span>
           </div>
           {% if forloop.counter|divisibleby:3 %}<div class="clearfix"></div>{% endif %}
       {% endfor %}
