--- a/foodSearch/templates/foodSearch/watchlist.html
+++ b/foodSearch/templates/foodSearch/watchlist.html
@@ -60,7 +60,7 @@
   </div>
   {% endif %}
   <div class="row justify-content-center mt-3">
-      <a class="btn btn-secondary" href="javascript:history.go(-1)" role="button">Retour</a>
+      <button class="btn btn-secondary return" role="button">Retour</button>
   </div>
 </section>
 
