loader initié ok

--- a/foodSearch/static/foodSearch/css/creative.css
+++ b/foodSearch/static/foodSearch/css/creative.css
@@ -9815,3 +9815,16 @@ header.masthead h1 {
 .e{
   background-color: #f00000;
 }
+
+#borderLoader{
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 5000;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
