--- a/foodSearch/templates/foodSearch/detail.html
+++ b/foodSearch/templates/foodSearch/detail.html
@@ -98,7 +98,7 @@
       <a href="{{ product.url }}"><button type="button" class="btn btn-dark-green">Voir la fiche d'OpenFoodFacts</button></a>
   </div>
   <div class="row justify-content-center mt-3">
-      <a class="btn btn-secondary" href="javascript:history.go(-1)" role="button">Retour</a>
+      <a class="btn btn-secondary" href="javascript:history.go(-1)" role="button load">Retour</a>
   </div>
 </section>
 {% endblock %}
