--- a/foodSearch/templates/foodSearch/watchlist.html
+++ b/foodSearch/templates/foodSearch/watchlist.html
@@ -60,7 +60,7 @@
   </div>
   {% endif %}
   <div class="row justify-content-center mt-3">
-      <button class="btn btn-secondary return" role="button">Retour</button>
+      <button class="btn btn-secondary return load" role="button">Retour</button>
   </div>
 </section>
 
