--- a/foodSearch/static/foodSearch/css/creative.css
+++ b/foodSearch/static/foodSearch/css/creative.css
@@ -67,6 +67,7 @@ body {
   color: #212529;
   text-align: left;
   background-color: #fff;
+  overflow-x:hidden;
 }
 
 [tabindex="-1"]:focus {
@@ -9827,4 +9828,39 @@ header.masthead h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.error{
+  background-image: url("../img/remy-2.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  min-height: 85vh;
+}
+
+.error-msg{
+  background:rgba(255, 255, 255, 0.5);
+  margin-top: 15vh;
+}
+
+.error-type{
+    font-size: 100px;
+}
+
+.error-txt{
+  font-size: 30px;
+}
+
+@media (max-width: 992px) {
+  .error-msg{
+    margin-top: 25vh;
+  }
+  .error-type{
+      font-size: 50px;
+  }
+  .error-txt{
+    font-size: 15px;
+  }
+
 }
