--- a/foodSearch/templates/foodSearch/base.html
+++ b/foodSearch/templates/foodSearch/base.html
@@ -62,7 +62,7 @@
           </li>
           {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link load" title="Mes aliments" href="{% url 'foodSearch:watchlist' %}"> <i class="fa fa-carott" aria-hidden="true"></i> </a>
+              <a class="nav-link load" title="Mes aliments" href="{% url 'foodSearch:watchlist' %}"> <i class="fa fa-carrot" aria-hidden="true"></i> </a>
             </li>
             <li class="nav-item">
               <!-- <a class="nav-link" title="Me déconnecter" href="{% url 'logout' %}"> <i class="fas fa-sign-out-alt fa-2x" aria-hidden="true"></i> </a> -->
