--- a/foodSearch/templates/foodSearch/base.html
+++ b/foodSearch/templates/foodSearch/base.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-
   <title>Pur Beurre</title>
-
   {% load static %}
-
   <!-- Font Awesome Icons -->
-  <link rel="stylesheet" type="text/css" href="{% static 'foodSearch/vendor/fontawesome-free/css/all.min.css' %}" />
-  <link rel="shortcut icon" href="{% static 'foodSearch/favicon/favicon.ico' %}">
-
+  <link rel="stylesheet" type="text/css" href="{% static 'foodSearch/vendor/fontawesome-free/css/all.min.css' %}">
+  <link rel="icon" href="{% static 'foodSearch/favicon/favicon.ico' %}">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
-
   <!-- Plugin CSS -->
   <link href="{% static 'foodSearch/vendor/magnific-popup/magnific-popup.css' %}" rel="stylesheet">
-
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="{% static 'foodSearch/css/creative.css' %}" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
 </head>
 
 <body id="page-top">
@@ -47,17 +39,16 @@
           <li class="nav-item">
             <form class="searchForm" action="{% url 'foodSearch:search' %}" method="get" accept-charset="utf-8">
               {% csrf_token %}
-                <input class="searchInput" class="form-control" name="query" placeholder="Chercher un produit">
+                <input class="searchInput form-control" name="query" placeholder="Chercher un produit">
             </form>
           </li>
           <li class="nav-item">
             {% if user.is_authenticated %}
               <a class="nav-link" title="Mon compte" href="{% url 'foodSearch:userpage' %}"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
             {% else %}
-              <a href="" id="" class="nav-link connection" title="Me connecter" data-toggle="modal" data-target="#modalLogIn">
+              <a href="" class="nav-link connection" title="Me connecter" data-toggle="modal" data-target="#modalLogIn">
                 <i class="fa fa-user fa-2x"></i>
               </a>
-
             {% endif %}
           </li>
           {% if user.is_authenticated %}
@@ -65,11 +56,9 @@
               <a class="nav-link load" title="Mes aliments" href="{% url 'foodSearch:watchlist' %}"> <i class="fa fa-carrot" aria-hidden="true"></i> </a>
             </li>
             <li class="nav-item">
-              <!-- <a class="nav-link" title="Me déconnecter" href="{% url 'logout' %}"> <i class="fas fa-sign-out-alt fa-2x" aria-hidden="true"></i> </a> -->
-              <a href="" id="disconnection" class="nav-link" title="Me déconnecter" data-toggle="modal" data-target="#modalLogOut">
+              <a id="disconnection" class="nav-link" title="Me déconnecter" data-toggle="modal" data-target="#modalLogOut">
                 <i class="fas fa-sign-out-alt fa-2x"></i>
               </a>
-
             </li>
           {% endif %}
         </ul>
@@ -92,14 +81,11 @@
   <!-- Bootstrap core JavaScript -->
   <script src="{% static 'foodSearch/vendor/jquery/jquery.min.js' %}"></script>
   <script src="{% static 'foodSearch/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-
   <!-- Plugin JavaScript -->
   <script src="{% static 'foodSearch/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
   <script src="{% static 'foodSearch/vendor/magnific-popup/jquery.magnific-popup.min.js' %}"></script>
-
   <!-- Custom scripts for this template -->
   <script src="{% static 'foodSearch/js/creative.js' %}"></script>
-
 </body>
 
 </html>
