--- a/foodSearch/templates/foodSearch/results.html
+++ b/foodSearch/templates/foodSearch/results.html
@@ -1,4 +1,3 @@
-
 {% extends 'foodSearch/base.html' %}
 {% load static %}
 
@@ -41,8 +40,7 @@
                 <a href="/detail/{{ substitute.id }}/" title="En savoir plus sur ce produit">
                   <div class="img_prod" style="background-color: #e8a75d">
                     <img
-                      class="image-color-theme img-responsive" src="{{ substitute.image_small_url }}"
-                      height="200rem" width="100rem"/>
+                      class="image-color-theme img-responsive" src="{{ substitute.image_small_url }}" alt="image produit"/>
                   </div>
                   <h3 class="h4 mb-2 text-white">{{ substitute.name }}</h3>
                 </a>
@@ -61,7 +59,7 @@
                     {% endif %}
                   </form>
                 {% else %}
-                    <a href="" id="NotConnected" data-toggle="modal" data-target="#modalNotConnected">
+                    <a href="" class="NotConnected" data-toggle="modal" data-target="#modalNotConnected">
                       <span class='fas fa-floppy-o'></span> Sauvegarder</a>
                 {% endif %}
 
@@ -94,6 +92,5 @@
   {% endif %}
 
 </section>
-
 
 {% endblock %}
