--- a/foodSearch/templates/foodSearch/search.html
+++ b/foodSearch/templates/foodSearch/search.html
@@ -1,4 +1,3 @@
-
 {% extends 'foodSearch/base.html' %}
 {% load static %}
 
@@ -22,8 +21,10 @@
               <a href="/results/{{ product.id }}/" class="load" title="chercher un substitut">
                 <div class="img_prod" style="background-color: #e8a75d">
                   <img
-                    class="image-color-theme img-responsive" src="{{ product.image_small_url }}"
-                    height="200rem" width="100rem"/>
+                    class="image-color-theme img-responsive"
+                    src="{{ product.image_small_url }}"
+                    alt="product img"
+                    />
                 </div>
                 <h3 class="h4 mb-2 text-white">{{ product.name }}</h3>
               </a>
@@ -38,6 +39,5 @@
     {% endif %}
   </div>
 </section>
-
 
 {% endblock %}
