--- a/foodSearch/templates/foodSearch/base.html
+++ b/foodSearch/templates/foodSearch/base.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" type="text/css" href="{% static 'foodSearch/vendor/fontawesome-free/css/all.min.css' %}">
   <link rel="icon" href="{% static 'foodSearch/favicon/favicon.ico' %}">
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Scope+One" rel="stylesheet" type="text/css">
   <!-- Plugin CSS -->
   <link href="{% static 'foodSearch/vendor/magnific-popup/magnific-popup.css' %}" rel="stylesheet">
   <!-- Theme CSS - Includes Bootstrap -->
