settings for github

--- a/foodSearch/templates/foodSearch/detail.html
+++ b/foodSearch/templates/foodSearch/detail.html
@@ -35,7 +35,7 @@
         {% endif %}
       </div>
 
-      <div class="col-md-5 pt-2 pb-2 ml-auto mr-auto text-center" style="background-color:rgba(52,90,97);">
+      <div class="prod_infos col-md-5 pt-2 pb-2 ml-auto mr-auto text-center" style="background-color:rgba(52,90,97);">
         <div class="col-12"><u>Repères nutritionnels pour 100g</u></div>
         <div class="row align-items-center">
           <div class="col text-right">
