--- a/foodSearch/templates/foodSearch/base.html
+++ b/foodSearch/templates/foodSearch/base.html
@@ -46,7 +46,7 @@
             {% if user.is_authenticated %}
               <a class="nav-link" title="Mon compte" href="{% url 'foodSearch:userpage' %}"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
             {% else %}
-              <a href="" class="nav-link connection" title="Me connecter" data-toggle="modal" data-target="#modalLogIn">
+              <a id="connect" class="nav-link connection" title="Me connecter" data-toggle="modal" data-target="#modalLogIn">
                 <i class="fa fa-user fa-2x"></i>
               </a>
             {% endif %}
