--- a/foodSearch/templates/registration/log.html
+++ b/foodSearch/templates/registration/log.html
@@ -26,7 +26,7 @@
               <input type="hidden" name="last_url" value="{{ request.get_full_path }}" />
 
               <div class="form-group text-center">
-                <input type="submit" value="Login" class="btn btn-primary" id="signUp-Submit">
+                <input type="submit" value="Login" class="btn btn-primary" id="signin-Submit">
               </div>
             </form>
           </div>
@@ -89,7 +89,7 @@
              placeholder="Mot de passe" required="required" />
           </div>
           <p class="text-danger text-center password-error" style="display:none;">Mot de passe incorrect</p>
-          <button type="submit" class="btn btn-secondary mt-3">Créer mon compte</button>
+          <button id="signUp-btn" type="submit" class="btn btn-secondary mt-3">Créer mon compte</button>
           </form>
       </div>
     </div>
